--- a/Vue/02-插值的操作/02-03-v-html指令的使用.html
+++ b/Vue/02-插值的操作/02-03-v-html指令的使用.html
@@ -9,21 +9,21 @@
 
 <body>
   <div id="app">
-    <ul>
-      <li v-for="item in movies">{{item}}</li>
-    </ul>
+    <h2>{{url}}</h2>
+    <!-- 
+    目标数据为html字符串的时候会渲染成实际的html元素，而不仅仅是文本内容，如下
+    <h2><a></a></h2> 
+    -->
+    <h2 v-html="url"></h2>
   </div>
   <script src="../js/vue.js"></script>
   <script>
     const app = new Vue({
       el: '#app',
       data: {
-        movies: ['星际穿越', '大话西游', '盗梦空间']
+        url: `<a href="https://www.baidu.com">baidu</a>`
       }
-    });
-
-    // 在浏览器的控制台中，通过app.movies可获取绑定数据
-    // 通过app.movies.push('无间道')，会立即反映并展示在页面上，这就是一种简单的响应式
+    })
   </script>
 </body>
 
