--- a/Vue/02-插值的操作/02-02-v-once指令的使用.html
+++ b/Vue/02-插值的操作/02-02-v-once指令的使用.html
@@ -9,21 +9,18 @@
 
 <body>
   <div id="app">
-    {{message}}
+    <!-- 元素及其包含的内容只渲染一次，并且之后不再更新（响应），即使相关数据发生变化 -->
+    <h2 v-once>{{message}}</h2>
+    <h2>{{message}}</h2>
   </div>
   <script src="../js/vue.js"></script>
   <script>
-    // 以下式声明式，只需声明目标对象，和需要绑定的数据，具体怎么做，Vue会帮我们实现
     const app = new Vue({
       el: '#app',
       data: {
         message: 'Hello World!'
       }
-    });
-
-    // 以下为命令式，每一步实现操作都具体通过命令告诉浏览器怎么做
-    // 1、获取id='app'的div元素
-    // 2、设置div元素的内容为'Hello World!'
+    })
   </script>
 </body>
 
