购物车案例（完）

--- a/Vue/08-书籍购物车案例/index.html
+++ b/Vue/08-书籍购物车案例/index.html
@@ -23,7 +23,7 @@
   5、通过v-if，v-else，根据数组长度切换显示表格数据
    -->
   <div id="app">
-    <div v-if="this.list.length > 0">
+    <div v-if="this.list.length">
       <table>
         <thead>
           <tr>
